--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"/>
+
+    <Spinner
+        android:scrollbarSize="30sp"
+        android:entries="@array/movies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:textSize="30sp"
         android:layout_width="match_parent"
@@ -25,6 +35,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClearClick"
+        android:textSize="30sp"
+        />
+    <Button
+        android:text="Next activity, please"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onNextActivity"
         android:textSize="30sp"
         />
 
