--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="????" />
+        android:text="" />
     <Button
         android:id="@+id/yes"
         android:onClick="onYesNoClick"
